--- a/Style.css
+++ b/Style.css
@@ -58,7 +58,7 @@ padding: 0;
     border-width: 1px;
     border-style: solid;
     border-color: black;
-    background-color: aqua;
+    background-color: red;
     padding: 10px;
     font-size: 25% larger;
 }
