--- a/Style.css
+++ b/Style.css
@@ -39,7 +39,7 @@ padding: 0;
     border-width: 1px;
     border-style: solid;
     border-color: black;
-    background-color: rebeccapurple;
+    background-color: pink;
     padding: 10px;
     font-size: 25% larger;
 }
